# apple-bundle-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
src/entitlements/: app_clips.rs  authentication.rs  car_play.rs  contacts.rs  deprecated_entitlements.rs  education.rs  exposure_notification.rs  games.rs  health.rs  home_automation.rs  hypervisor.rs  icloud.rs  mod.rs  networking.rs  push_notifications.rs  security.rs  sensors.rs  siri.rs  system.rs  tv.rs  wallet.rs  wireless_interfaces.rs
src/info_plist/: app_execution.rs  app_services.rs  bundle_configuration.rs  data_and_storage.rs  kernel_and_drivers.rs  mod.rs  protected_resources.rs  services.rs  user_interface.rs
