[package]
name = "apple-bundle"
version = "0.0.5"
authors = ["DodoRare Team <dodonotrare@gmail.com>"]
description = "Apple BundleResources serializer and deserializer for Rust"
repository = "https://github.com/dodorare/apple-bundle-rs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_plain = "0.3"
plist = { version = "1.0.1", package = "creator-plist", optional = true }

[features]
default = ["plist"]

[dev-dependencies]
tempfile = "3.2"
