[package]
name = "apple-bundle"
version = "0.1.3"
authors = ["DodoRare Team <dodonotrare@gmail.com>"]
description = "Apple BundleResources serializer and deserializer for Rust"
repository = "https://github.com/dodorare/apple-bundle-rs"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
plist = { version = "1.1", optional = true }

[features]
default = ["plist"]

[dev-dependencies]
tempfile = "3.2"
